# axplat-riscv64-sg2002

./: Cargo.toml  axconfig.toml
src/: boot.rs  power.rs
